--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,11 +1,9 @@
-name: Deploy VitePress to GitHub Pages
+name: Deploy VitePress to Pages
+
 on:
   push:
-    branches:
-      - main
-    paths:
-      - 'docs/**'
-      - '.github/workflows/pages.yml'
+    branches: [main]
+    paths: ['docs/**', '.github/workflows/pages.yml', 'package.json']
   workflow_dispatch:
 
 permissions:
@@ -13,17 +11,35 @@ permissions:
   pages: write
   id-token: write
 
+concurrency:
+  group: 'pages'
+  cancel-in-progress: true
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with: { node-version: '20' }
-      - run: npm ci || npm i
-      - run: npm run docs:build  # Builds the site
-      - uses: actions/upload-pages-artifact@v3
-        with: { path: 'docs/.vitepress/dist' }
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Full history for lastUpdated feature
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci || npm install
+
+      - name: Build VitePress site
+        run: npm run docs:build
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: 'docs/.vitepress/dist'
 
   deploy:
     needs: build
@@ -32,5 +48,11 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     steps:
-      - id: deployment
+      - name: Deploy to GitHub Pages
+        id: deployment
         uses: actions/deploy-pages@v4
+
+      - name: Notify deployment
+        if: success()
+        run: |
+          echo "🚀 Site deployed to ${{ steps.deployment.outputs.page_url }}"
