--- a/package.json
+++ b/package.json
@@ -2,15 +2,40 @@
   "name": "go-to-docs",
   "version": "1.0.0",
   "description": "A centralized resource for reusable practices, team knowledge, and decision-making frameworks.",
+  "type": "module",
   "scripts": {
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs --port 5173",
     "guard": "node scripts/guard.mjs",
-    "stale": "node scripts/stale.mjs"
+    "stale": "node scripts/stale.mjs",
+    "test": "node --test tests/*.test.mjs",
+    "test:watch": "node --test --watch tests/*.test.mjs",
+    "test:coverage": "node --test --experimental-test-coverage tests/*.test.mjs",
+    "validate": "npm run guard && npm run docs:build",
+    "lint": "npm run guard",
+    "ci": "npm run validate && npm test"
+  },
+  "keywords": ["documentation", "vitepress", "knowledge-base", "governance"],
+  "author": "Louis Opheim",
+  "license": "SEE LICENSE FILES",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lop-Louis/go-to-docs.git"
+  },
+  "bugs": {
+    "url": "https://github.com/lop-Louis/go-to-docs/issues"
+  },
+  "homepage": "https://lop-Louis.github.io/go-to-docs",
+  "engines": {
+    "node": ">=20.0.0",
+    "npm": ">=10.0.0"
   },
   "devDependencies": {
-    "vitepress": "^1.3.4",
-    "gray-matter": "^4.0.3"
+    "gray-matter": "^4.0.3",
+    "vitepress": "^1.3.4"
+  },
+  "dependencies": {
+    "vue": "^3.5.22"
   }
 }
