--- a/.github/workflows/content-guard.yml
+++ b/.github/workflows/content-guard.yml
@@ -23,20 +23,25 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
+
       - name: Setup Node
         uses: actions/setup-node@v6
         with:
           node-version: '20'
-          cache: 'npm'
+          cache: 'pnpm'
 
       - name: Install dependencies
-        run: npm ci || npm install
+        run: pnpm install --frozen-lockfile
 
       - name: Run content guard
         id: guard
         run: |
           echo "Running content guard checks..."
-          npm run guard 2>&1 | tee guard-output.txt
+          pnpm run guard 2>&1 | tee guard-output.txt
           echo "guard_exit_code=${PIPESTATUS[0]}" >> $GITHUB_OUTPUT
         continue-on-error: true
 
@@ -59,7 +64,7 @@ jobs:
 
       - name: Build test
         id: build
-        run: npm run docs:build
+        run: pnpm run docs:build
         continue-on-error: true
 
       - name: Determine status
