--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,15 +20,19 @@ jobs:
         uses: actions/checkout@v5
         with:
           fetch-depth: 0
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
       - name: Setup Node
         uses: actions/setup-node@v6
         with:
           node-version: 20
-          cache: 'npm'
+          cache: 'pnpm'
       - name: Install deps
-        run: npm ci
+        run: pnpm install --frozen-lockfile
       - name: Preview changelog aggregation
-        run: npm run changelog:preview > changelog_preview.md
+        run: pnpm run changelog:preview > changelog_preview.md
       - name: Append preview artifact
         uses: actions/upload-artifact@v4
         with:
@@ -37,7 +41,7 @@ jobs:
       - name: Finalize changelog
         if: ${{ github.event_name == 'schedule' || inputs.finalize == 'true' }}
         run: |
-          npm run changelog:finalize
+          pnpm run changelog:finalize
           cat CHANGELOG.md
       - name: Derive tag
         id: tag
