--- a/.github/workflows/stale-pages.yml
+++ b/.github/workflows/stale-pages.yml
@@ -20,17 +20,22 @@ jobs:
         with:
           fetch-depth: 0 # Need full history to check last commit dates
 
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
+
       - name: Setup Node
         uses: actions/setup-node@v6
         with:
           node-version: '20'
-          cache: 'npm'
+          cache: 'pnpm'
 
       - name: Install dependencies
-        run: npm ci || npm install
+        run: pnpm install --frozen-lockfile
 
       - name: Run stale detection
-        run: npm run stale > stale-report.md
+        run: pnpm run stale > stale-report.md
 
       - name: Check if report has content
         id: check
