feat: add Lighthouse CI runner with Playwright-managed VitePress server
- Implemented a script to start a VitePress preview server using Playwright.
- Added functionality to wait for the server to be responsive.
- Integrated Lighthouse audits for key documentation pages.
- Outputs audit results in JSON format and generates a summary report.
- Includes cleanup procedures for server and browser processes.

--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -35,42 +35,75 @@ jobs:
       - name: Build site
         run: pnpm run docs:build
 
-      - name: Start preview server
-        run: pnpm run docs:preview &
-        env:
-          PORT: 5173
+      - name: Install Playwright browsers
+        run: npx playwright install chromium --with-deps
 
-      - name: Wait for server
-        run: |
-          npx wait-on http://localhost:5173 -t 30000
+      - name: Run Lighthouse CI with Playwright
+        id: lighthouse
+        run: pnpm run lighthouse
+        continue-on-error: true
 
-      - name: Run Lighthouse CI
-        uses: treosh/lighthouse-ci-action@v11
+      - name: Upload Lighthouse results
+        if: always()
+        uses: actions/upload-artifact@v4
         with:
-          urls: |
-            http://localhost:5173/go-to-docs/
-            http://localhost:5173/go-to-docs/band-a
-            http://localhost:5173/go-to-docs/governance
-          uploadArtifacts: true
-          temporaryPublicStorage: true
-          runs: 3
+          name: lighthouse-results
+          path: .lighthouse/
+          retention-days: 30
 
       - name: Comment PR with results
         if: github.event_name == 'pull_request'
         uses: actions/github-script@v7
         with:
           script: |
-            const comment = `## 🔦 Lighthouse Performance Report
+            const fs = require('fs');
+            const path = require('path');
 
-            Performance audit completed! View detailed results in the artifacts.
+            // Read latest results
+            const lighthouseDir = '.lighthouse';
+            const files = fs.readdirSync(lighthouseDir);
+            const latestFile = files.sort().reverse()[0];
+            const results = JSON.parse(fs.readFileSync(path.join(lighthouseDir, latestFile), 'utf8'));
 
-            **Key Metrics Checked:**
-            - ⚡ Performance
-            - ♿ Accessibility
-            - 🎯 Best Practices
-            - 🔍 SEO
+            // Build comment
+            let comment = `## 🔦 Lighthouse Performance Report\n\n`;
+            comment += `Performance audit completed with Playwright-managed server.\n\n`;
 
-            Check the workflow artifacts for full Lighthouse reports.`;
+            const thresholds = {
+              performance: 90,
+              accessibility: 100,
+              bestPractices: 90,
+              seo: 90
+            };
+
+            for (const result of results) {
+              if (result.error) {
+                comment += `### ❌ ${result.url}\n\n`;
+                comment += `Error: ${result.error}\n\n`;
+                continue;
+              }
+
+              comment += `### 🔗 ${result.url}\n\n`;
+              comment += `| Category | Score | Threshold | Status |\n`;
+              comment += `|----------|-------|-----------|--------|\n`;
+
+              for (const [category, score] of Object.entries(result.scores)) {
+                const threshold = thresholds[category];
+                const passed = score >= threshold;
+                const icon = passed ? '✅' : '❌';
+                const displayName = category.charAt(0).toUpperCase() + category.slice(1).replace(/([A-Z])/g, ' $1');
+
+                comment += `| ${displayName} | **${score}** | ${threshold} | ${icon} |\n`;
+              }
+              comment += `\n`;
+            }
+
+            comment += `\n📊 **Performance Targets:**\n`;
+            comment += `- Performance: ≥90 (production-ready)\n`;
+            comment += `- Accessibility: 100 (WCAG AA compliance)\n`;
+            comment += `- Best Practices: ≥90\n`;
+            comment += `- SEO: ≥90\n\n`;
+            comment += `_Powered by Lighthouse + Playwright for reliable CI execution_`;
 
             github.rest.issues.createComment({
               owner: context.repo.owner,
