--- a/package.json
+++ b/package.json
@@ -22,9 +22,8 @@
     "lint:fix": "eslint . --fix && prettier --write .",
     "typecheck": "tsc --noEmit",
     "links": "node scripts/link-check.mjs",
+    "lighthouse": "node scripts/lighthouse-runner.mjs",
     "review:update": "node scripts/update-last-reviewed.mjs",
-    "validate": "pnpm run lint && pnpm run typecheck && pnpm run guard && pnpm run docs:build && pnpm run links",
-    "ci": "pnpm run validate && pnpm test",
     "prepare": "husky"
   },
   "lint-staged": {
@@ -65,6 +64,7 @@
     "@typescript-eslint/eslint-plugin": "^8.46.3",
     "@typescript-eslint/parser": "^8.46.3",
     "@vitejs/plugin-vue": "^6.0.1",
+    "typescript": "^5.7.2",
     "@vitest/ui": "^4.0.6",
     "@vue/test-utils": "^2.4.6",
     "eslint": "^9.39.1",
@@ -74,7 +74,9 @@
     "gray-matter": "^4.0.3",
     "happy-dom": "^20.0.10",
     "husky": "^9.1.7",
+    "lighthouse": "^12.2.1",
     "lint-staged": "^16.2.6",
+    "playwright": "^1.48.2",
     "prettier": "^3.6.2",
     "vitepress": "^1.3.4",
     "vitest": "^4.0.6",
