--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -37,6 +37,8 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Build VitePress site
+        env:
+          VITE_GA_ID: ${{ secrets.GA_ID }}
         run: pnpm run docs:build
 
       - name: Upload artifact
