--- a/.github/workflows/content-guard.yml
+++ b/.github/workflows/content-guard.yml
@@ -63,6 +63,8 @@ jobs:
 
       - name: Build test
         id: build
+        env:
+          VITE_GA_ID: ${{ secrets.GA_ID }}
         run: pnpm run docs:build
         continue-on-error: true
 
