--- a/.github/workflows/content-guard.yml
+++ b/.github/workflows/content-guard.yml
@@ -6,7 +6,7 @@ on:
     paths: ['docs/**', 'scripts/**', '.github/**']
 
 permissions:
-  contents: read
+  contents: write
   pull-requests: write
   issues: write
   checks: write
