--- a/package.json
+++ b/package.json
@@ -51,12 +51,12 @@
   "license": "SEE LICENSE FILES",
   "repository": {
     "type": "git",
-    "url": "https://github.com/lop-louis/Northbook.git"
+    "url": "https://github.com/lop-louis/northbook.git"
   },
   "bugs": {
-    "url": "https://github.com/lop-louis/Northbook/issues"
+    "url": "https://github.com/lop-louis/northbook/issues"
   },
-  "homepage": "https://lop-louis.github.io/Northbook",
+  "homepage": "https://lop-louis.github.io/northbook",
   "engines": {
     "node": ">=20.0.0",
     "npm": ">=10.0.0"
