feat(docs): add primary action links and improve accessibility checks

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "docs:dev": "vitepress dev docs",
-    "docs:build": "vitepress build docs",
+    "docs:build": "vitepress build docs && node scripts/verify-primary-actions.mjs",
     "docs:preview": "vitepress preview docs --port 5173",
     "guard": "node scripts/guard.mjs",
     "stale": "node scripts/stale.mjs",
