--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "type": "module",
   "scripts": {
     "docs:dev": "vitepress dev docs",
-    "docs:build": "vitepress build docs",
+    "docs:build": "node scripts/docs-build.mjs",
     "docs:preview": "vitepress preview docs --port 5173",
-    "docs:guard": "node scripts/verify-primary-actions.mjs && node scripts/ux.scan.mjs",
-    "guard": "node scripts/guard.mjs",
+    "guard": "node scripts/guard.mjs && node scripts/ux-scan.mjs",
     "stale": "node scripts/stale.mjs",
     "changelog:preview": "node scripts/changelog.mjs preview",
     "changelog:finalize": "node scripts/changelog.mjs finalize",
