--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -71,6 +71,7 @@ jobs:
       - name: Build site
         env:
           VITE_GA_ID: ${{ secrets.GA_ID || 'G-511628512' }}
+          SKIP_DOCS_GUARD: ${{ github.event_name == 'pull_request' && '1' || '0' }}
         run: pnpm run docs:build
 
       - name: Run Lighthouse CI with Playwright
@@ -94,9 +95,18 @@ jobs:
             const fs = require('fs');
             const path = require('path');
 
-            // Read latest results
             const lighthouseDir = '.lighthouse';
-            const files = fs.readdirSync(lighthouseDir);
+            if (!fs.existsSync(lighthouseDir)) {
+              core.warning(`Lighthouse directory "${lighthouseDir}" not found. Skipping comment.`);
+              return;
+            }
+
+            const files = fs.readdirSync(lighthouseDir).filter(name => name.endsWith('.json'));
+            if (!files.length) {
+              core.warning(`No Lighthouse result files found in "${lighthouseDir}".`);
+              return;
+            }
+
             const latestFile = files.sort().reverse()[0];
             const results = JSON.parse(fs.readFileSync(path.join(lighthouseDir, latestFile), 'utf8'));
 
