feat(audit): add drift audit and update content guard workflow

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "docs:dev": "vitepress dev docs",
     "docs:build": "node scripts/docs-build.mjs",
     "docs:preview": "vitepress preview docs --port 5173",
-    "guard": "node scripts/guard.mjs && node scripts/ux-scan.mjs",
+    "docs:guard": "pnpm run guard && pnpm run drift && pnpm run ux:scan",
+    "guard": "node scripts/guard.mjs",
+    "drift": "node scripts/drift.mjs",
     "stale": "node scripts/stale.mjs",
     "changelog:preview": "node scripts/changelog.mjs preview",
     "changelog:finalize": "node scripts/changelog.mjs finalize",
