--- a/.github/workflows/content-guard.yml
+++ b/.github/workflows/content-guard.yml
@@ -60,6 +60,17 @@ jobs:
           exit $GUARD_EXIT
         continue-on-error: true
 
+      - name: Drift audit
+        id: drift
+        run: |
+          set -o pipefail
+          DRIFT_FORMAT=json pnpm run drift | tee drift-output.json
+          DRIFT_STATUS=$(jq -r '.status' drift-output.json)
+          DRIFT_WARNINGS=$(jq '.warnings | length' drift-output.json)
+          echo "status=$DRIFT_STATUS" >> $GITHUB_OUTPUT
+          echo "warnings=$DRIFT_WARNINGS" >> $GITHUB_OUTPUT
+        continue-on-error: true
+
       - name: UX scan
         id: uxscan
         run: pnpm run ux:scan
@@ -121,6 +132,8 @@ jobs:
             const guardStatus = '${{ steps.guard.outputs.status }}';
             const linksResult = '${{ steps.links.outcome }}';
             const uxResult = '${{ steps.uxscan.outcome }}';
+            const driftStatus = '${{ steps.drift.outputs.status }}';
+            const driftWarnings = '${{ steps.drift.outputs.warnings }}';
             const gitleaksResult = '${{ steps.gitleaks.outcome }}';
             const buildResult = '${{ steps.build.outcome }}';
 
@@ -148,6 +161,11 @@ jobs:
                 : '❌ Failed'
             } |
             | Link Integrity | ${linksResult === 'success' ? '✅ Passed' : '⚠️ Issues Found'} |
+            | Drift Audit | ${
+              driftStatus === 'warning'
+                ? `⚠️ ${driftWarnings || 0} warning(s)`
+                : '✅ Clear'
+            } |
             | UX Scan | ${uxResult === 'success' ? '✅ Passed' : '⚠️ Issues Found'} |
             | Sensitive Data Scan | ${gitleaksResult === 'success' ? '✅ Passed' : '❌ Secrets Detected'} |
             | Documentation Build | ${buildResult === 'success' ? '✅ Passed' : '❌ Build Failed'} |
@@ -161,6 +179,7 @@ jobs:
             **What these checks mean:**
             - **Band A Compliance:** Verifies content follows public-safe sanitization rules (no internal URLs, ticket IDs, calendar dates, secrets, personal data)
             - **Link Integrity:** Validates all internal documentation links work correctly
+            - **Drift Audit:** Highlights storytelling metadata and inclusive-language gaps (non-blocking hygiene)
             - **UX Scan:** Ensures primary action callouts are present before the first section for pages that declare one
             - **Sensitive Data Scan:** Ensures no API keys, tokens, or credentials are exposed
             - **Documentation Build:** Confirms the site builds successfully with your changes
