--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "docs:dev": "vitepress dev docs",
     "docs:build": "node scripts/docs-build.mjs",
     "docs:preview": "vitepress preview docs --port 5173",
-    "guard": "node scripts/guard.mjs && node scripts/ux-scan.mjs",
+    "docs:guard": "pnpm run frontmatter:lint && pnpm run guard && pnpm run drift && pnpm run ux:scan",
+    "guard": "node scripts/guard.mjs",
+    "frontmatter:lint": "node scripts/frontmatter-lint.mjs",
+    "nav:sync": "node scripts/sync-navigation.mjs",
+    "readme:sync": "node scripts/sync-readme.mjs",
+    "drift": "node scripts/drift.mjs",
     "stale": "node scripts/stale.mjs",
     "changelog:preview": "node scripts/changelog.mjs preview",
     "changelog:finalize": "node scripts/changelog.mjs finalize",
@@ -36,10 +41,15 @@
       "prettier --write"
     ],
     "docs/**/*.md": [
-      "node scripts/guard.mjs"
+      "node scripts/guard.mjs",
+      "pnpm run nav:sync && git add docs/.vitepress/navigation.generated.ts"
     ],
     "runbooks/**/*.md": [
-      "node scripts/guard.mjs"
+      "node scripts/guard.mjs",
+      "pnpm run nav:sync && git add docs/.vitepress/navigation.generated.ts"
+    ],
+    "scripts/scripts-meta.json": [
+      "pnpm run readme:sync && git add README.md"
     ]
   },
   "keywords": [
@@ -68,9 +78,9 @@
     "@typescript-eslint/eslint-plugin": "^8.46.3",
     "@typescript-eslint/parser": "^8.46.3",
     "@vitejs/plugin-vue": "^6.0.1",
-    "typescript": "^5.7.2",
     "@vitest/ui": "^4.0.6",
     "@vue/test-utils": "^2.4.6",
+    "ajv": "^8.17.1",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-vue": "^10.5.1",
@@ -82,6 +92,7 @@
     "lint-staged": "^16.2.6",
     "playwright": "^1.48.2",
     "prettier": "^3.6.2",
+    "typescript": "^5.7.2",
     "vitepress": "^1.3.4",
     "vitest": "^4.0.6",
     "vue-eslint-parser": "^10.2.0"
