docs(template): enhance automated checks and update PR template details (#64)

--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -4,6 +4,7 @@ on:
   workflow_run:
     workflows: ['Deploy VitePress to Pages']
     types: [completed]
+    branches: [main]
 
 permissions:
   contents: read
