--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "changelog:preview": "node scripts/changelog.mjs preview",
     "changelog:finalize": "node scripts/changelog.mjs finalize",
     "changelog:add": "node scripts/changelog.mjs add",
-    "test": "node --test tests/*.test.mjs && vitest run",
+    "test": "pnpm run test:unit && pnpm run test:components",
     "test:unit": "node --test tests/*.test.mjs",
-    "test:components": "vitest run",
+    "test:components": "vitest run tests/components tests/accessibility",
     "test:watch": "vitest watch",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui",
