Ops: add guard + labs + reports; monthly tag signal; PR receipts; analytics pilot; daily guard

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "docs:build": "node scripts/docs-build.mjs",
     "docs:preview": "vitepress preview docs --port 5173",
     "docs:guard": "pnpm run frontmatter:lint && pnpm run guard && pnpm run drift && pnpm run ux:scan",
-    "guard": "node scripts/guard.mjs",
+    "guard": "node scripts/check-content.mjs",
+    "labs": "node scripts/run-labs.mjs",
     "frontmatter:lint": "node scripts/frontmatter-lint.mjs",
     "nav:sync": "node scripts/sync-navigation.mjs",
     "readme:sync": "node scripts/sync-readme.mjs",
