Site: footer analytics+release, receipts page, Quick-Run explainer, CTA pattern

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "pnpm run docs:build",
     "docs:dev": "vitepress dev docs",
-    "docs:build": "node scripts/docs-build.mjs",
+    "docs:build": "RELEASE_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo dev) node scripts/docs-build.mjs",
     "docs:preview": "vitepress preview docs --port 5173",
     "docs:guard": "pnpm run frontmatter:lint && pnpm run guard && pnpm run drift && pnpm run ux:scan",
     "guard": "node scripts/check-content.mjs",
