Ops: incremental labs — skip build when docs unchanged; unfreeze docs; keep PR guard

--- a/.github/workflows/release-monthly.yml
+++ b/.github/workflows/release-monthly.yml
@@ -15,7 +15,9 @@ jobs:
         with:
           node-version: '20'
       - run: npm i -g pnpm && pnpm i
-      - run: pnpm guard || true
+      - run: pnpm guard
+      - run: pnpm fingerprint
+      - run: node scripts/should-build.mjs || true
       - run: pnpm labs || true
       - name: Compute signal and tag
         run: |
