--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "docs:guard": "pnpm run frontmatter:lint && pnpm run guard && pnpm run drift && pnpm run ux:scan",
     "guard": "node scripts/check-content.mjs",
     "labs": "node scripts/run-labs.mjs",
+    "verify:cta": "node scripts/verify-primary-actions.mjs",
+    "fingerprint": "node scripts/build-fingerprint.mjs",
+    "should-build": "node scripts/should-build.mjs",
     "frontmatter:lint": "node scripts/frontmatter-lint.mjs",
     "nav:sync": "node scripts/sync-navigation.mjs",
     "readme:sync": "node scripts/sync-readme.mjs",
