feat: Add Cloudflare analytics snapshot functionality
- Updated runbooks to include links for Cloudflare analytics receipts and Signal Registry.
- Created a new Signal Registry document detailing contract signals with thresholds and kill criteria.
- Introduced a new State document to provide public state for the Northbook contract.
- Added a new script to generate Cloudflare analytics snapshots, producing JSON and Markdown summary files.
- Implemented a new Cloudflare snapshot JSON file to store generated analytics data.
- Created a Markdown summary file for Cloudflare analytics snapshots.
- Updated package.json to include the new analytics snapshot script.
- Added signal definitions and computation logic for various metrics in the new script.
- Enhanced the reporting structure for better visibility of analytics data.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "labs": "node scripts/run-labs.mjs",
     "verify:cta": "node scripts/verify-primary-actions.mjs",
     "fingerprint": "node scripts/build-fingerprint.mjs",
+    "analytics:snapshot": "node scripts/cloudflare-snapshot.mjs",
     "should-build": "node scripts/should-build.mjs",
     "freeze:check": "node scripts/freeze-manager.mjs check",
     "freeze:verify": "node scripts/freeze-manager.mjs verify-file",
