refactor: remove obsolete link-check script and replace with anchor conversion and heading normalization scripts
- Deleted `check-links.mjs` and `link-check.mjs` as they are no longer needed.
- Added `convert-anchors-to-markdown.mjs` to convert HTML anchors in markdown files to markdown links.
- Introduced `fix-inline-headings.mjs` to normalize bold headings in markdown files to H3.
- Created `make-headings-unique.mjs` to ensure unique headings across markdown files.
- Updated `docs-build.mjs` to remove the verification step for primary actions.
- Modified `ux-scan.mjs` to utilize markdown link regex for scanning links.
- Removed `verify-primary-actions.mjs` as its functionality is now covered by other scripts.

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,7 @@
     "vue.volar",
     "yzhang.markdown-all-in-one",
     "davidanson.vscode-markdownlint",
-    "editorconfig.editorconfig"
+    "editorconfig.editorconfig",
+    "redhat.vscode-yaml"
   ]
 }
