feat: Add Vue.js and source map files to VitePress cache
style: Update sidebar background color and adjust theme styles

chore: Document release-centric ops folders decision and create related files

chore: Link latest release bundle in receipts and state visibility documentation

chore: Create initial release ops bundle for November 2025

build: Enhance CI checks for release folder structure and frontmatter requirements

feat: Implement script to validate release folder structure and contents

--- a/.github/workflows/quality-gate.yml
+++ b/.github/workflows/quality-gate.yml
@@ -42,6 +42,10 @@ jobs:
         id: frontmatter
         run: pnpm run frontmatter:lint
 
+      - name: 🔴 Release folder structure
+        id: release_folders
+        run: pnpm run release:folders:check
+
       # WARNERS (continue on error)
       - name: 🟡 Content guard
         id: content_guard
@@ -96,6 +100,12 @@ jobs:
             echo "❌ **Frontmatter schema failed** - Add missing required fields" >> $GITHUB_STEP_SUMMARY
           fi
 
+          if [ "${{ steps.release_folders.outcome }}" == "success" ]; then
+            echo "✅ Release folder structure" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "❌ **Release folder structure failed** - Ensure ops/releases/YYYY-MM/index.md exists with required metadata." >> $GITHUB_STEP_SUMMARY
+          fi
+
           # Warners section
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "## 🟡 Advisory (Non-Blocking)" >> $GITHUB_STEP_SUMMARY
@@ -112,7 +122,7 @@ jobs:
           echo "---" >> $GITHUB_STEP_SUMMARY
 
           # Final verdict
-          if [ "${{ steps.markdown_lint.outcome }}" == "success" ] && [ "${{ steps.frontmatter.outcome }}" == "success" ]; then
+          if [ "${{ steps.markdown_lint.outcome }}" == "success" ] && [ "${{ steps.frontmatter.outcome }}" == "success" ] && [ "${{ steps.release_folders.outcome }}" == "success" ]; then
             echo "✨ **All critical checks passed** - Ready to merge" >> $GITHUB_STEP_SUMMARY
           else
             echo "🚫 **Critical checks failed** - Fix blockers above before merging" >> $GITHUB_STEP_SUMMARY
