--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@ node_modules/
 dist/
 
 # VitePress build
-.vitepress/dist/
-.vitepress/cache/*
+docs/.vitepress/dist/
+docs/.vitepress/cache/
 
 # Generated public folders
 public/v1/
